[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="hello"
path="src/hello.rs"

[[bin]]
name="hello2"
path="src/hello2.rs"

[[bin]]
name="print"
path="src/print.rs"

[[bin]]
name="print-debug"
path="src/print-debug.rs"

[[bin]]
name="print-display"
path="src/print-display.rs"

[[bin]]
name="print-list"
path="src/print-list.rs"

[[bin]]
name="primitives"
path="src/primitives.rs"

[[bin]]
name="literals-and-operators"
path="src/literals-and-operators.rs"

[[bin]]
name="tuples"
path="src/tuples.rs"

[dependencies]
